# ZTP_projekt3

./: .gitignore  README.md  Snakefile_task4  analiza.ipynb  data_preparation.py  pyproject.toml  statistics_calculation.py  visualizations.py
.github/workflows/: pytest.yml
cleaned_data/: data_2014.csv.xz  data_2015.csv.xz  data_2018.csv.xz  data_2021.csv.xz  data_2024.csv.xz  metadata_2014.csv.xz  metadata_2018.csv.xz  metadata_2019.csv.xz  metadata_2021.csv.xz  pd1_dataset_data.csv.xz  pd1_dataset_metadata.csv.xz  pd3_dataset_data.csv.xz
config/: pm25_details.yaml  pubmed_queries.yaml  report_task4_template.md  task4.yaml
data/cleaned_data/: data_2018.csv.xz  data_2019.csv.xz  data_2024.csv.xz  metadata_2015.csv.xz  metadata_2024.csv.xz  pd1_dataset_data.csv.xz  pd1_dataset_metadata.csv.xz
data/raw_data/: raw_data_2014.csv.xz  raw_data_2015.csv.xz  raw_data_2018.csv.xz  raw_data_2019.csv.xz  raw_data_2021.csv.xz  raw_data_2024.csv.xz
raw_data/: raw_updated_metadata_20251230.csv.xz
src/: render_report_pdf.py  report.py
src/literature/: pubmed_fetch.py
src/pm25/: data_preparation.py  pm25_year.py  visualizations.py
tests/: test_code_mapping_and_updates.py  test_combine_frames.py  test_download_gios_archive.py  test_download_updated_metadata.py  test_extend_metadata_with_station_info.py  test_midnight_handling.py  test_notebook_clean.py  test_pubmed_fetch.py  test_report_nan_runs.py  test_split_raw_df.py  test_statistics_calculation.py  test_stub.py
