[project]
name = "ZTP_projekt3"
version = "0.0.0"
description = "Analiza jakości powietrza wg. danych GIOŚ"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "seaborn",
  "requests",
  "pyyaml",
  "biopython",
  "snakemake",
  "markdown-it-py",
  "weasyprint",
  "openpyxl",
  "jupyter",
  "ipykernel",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
